# ai-distiller

./: .basic_class.php.aid.txt  .claude.json  .dockerignore  .gitignore  .gitignore.rust  .gitmodules  .golangci.yml  .pre-commit-config.yaml  .test-php-types.php.nimpl.aid.txt  .test.php.aid.txt  BUILD.md  CLAUDE.md  CLEANUP_COMPLETE.md  Cargo.toml  DESIGN_ARCHITECTURE.md  Dockerfile  ENHANCEMENT_ANALYSIS.md  ENHANCEMENT_WAVE_1.md  LICENSE  Makefile  Makefile.optimized  NEXT_STEPS_PLAN.md  PROGRESS_SUMMARY.md  README.md  README.rust.md  ROADMAP_100_COVERAGE.md  RUST_PROGRESS.md  SESSION_6_SUMMARY.md  SESSION_7_SUMMARY.md  STATUS.md  TEST_COVERAGE_PROGRESS.md  TEST_ENHANCEMENT_PLAN.md  ai-distiller  build.sh  checksums.txt.template  coverage.txt  example.py  go.mod  go.sum  install.ps1  (+2 more)
.github/workflows/: ci.yml  release.yml  rust-ci.yml
cmd/ai-distiller/: main.go
cmd/aid/: main.go
cmd/debug-typescript/: main.go
cmd/parser-test/: main.go
cmd/performance-test/: main.go
cmd/semantic-resolver-test/: main.go
cmd/semantic-test/: main.go
cmd/test-audit/: main.go
crates/aid-cli/: Cargo.toml
crates/aid-cli/benches/: processing.rs
crates/aid-cli/src/: main.rs
crates/distiller-core/: Cargo.toml
crates/distiller-core/src/: error.rs  lib.rs  logging.rs  options.rs  stripper.rs
crates/distiller-core/src/ir/: mod.rs  nodes.rs  types.rs  visitor.rs
crates/distiller-core/src/parser/: mod.rs  pool.rs
crates/distiller-core/src/processor/: directory.rs  language.rs  mod.rs
crates/distiller-core/tests/: edge_case_tests.rs  integration_tests.rs
crates/formatter-json/: Cargo.toml
crates/formatter-jsonl/: Cargo.toml
crates/formatter-markdown/: Cargo.toml
crates/formatter-markdown/src/: lib.rs
crates/formatter-text/: Cargo.toml
crates/formatter-xml/: Cargo.toml
crates/lang-c/: Cargo.toml
crates/lang-cpp/: Cargo.toml
crates/lang-csharp/: Cargo.toml
crates/lang-go/: Cargo.toml
crates/lang-go/src/: lib.rs
crates/lang-java/: Cargo.toml
crates/lang-javascript/: Cargo.toml
crates/lang-javascript/src/: lib.rs
crates/lang-kotlin/: Cargo.toml  README.md
crates/lang-php/: Cargo.toml
crates/lang-python/: Cargo.toml
crates/lang-python/src/: lib.rs
crates/lang-ruby/: Cargo.toml
crates/lang-rust/: Cargo.toml
crates/lang-swift/: Cargo.toml
crates/lang-typescript/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
docs/: 01_INTRO.md  02_PRD.md  03_IR_SCHEMA.md  03_IR_SCHEMA_v2.md  AI-ACTION-ARCHITECTURE-DECISION.md  AID-TO-NPM.md  COMMAND-LINE-OPTIONS.md  CROSS_COMPILATION.md  MCP-AI-IMPROVEMENTS.TASK-LIST.md  PROPERTY_ANNOTATIONS_PROPOSAL.md  TESTING.md  VISIBILITY_PREFIXES.md  binary-optimization.md  formats.md  gemini_analysis_response.md  ir_depth_analysis.md  mcp-integration.md
docs/internal/: 01_INTRO.md  02_PRD.md  03_IR_SCHEMA.md  03_IR_SCHEMA_v2.md  AI-ACTION-ARCHITECTURE-DECISION.md  CONSISTENCY_FIXES.md  DESIGN_ARCHITECTURE.md  FILE_ORGANIZATION_SUMMARY.md  MCP-IDEAS.md  MCP-TEST-RESULTS-FIXED.md  PATTERN-MATCHING-IMPROVEMENTS.md  PROPERTY_ANNOTATIONS_PROPOSAL.md  cli-args.ISSUES.md  cli-args.TASK-LIST.MD  final_architecture_decision.md  formats.md  ir_depth_analysis.md  mcp-integration.md  npm-distribution.md  stripper_architecture_analysis.md  summary-formatters.md  summary.md
docs/lang/: cpp.md  csharp.md  go.md  java.md  javascript.md  kotlin.md  php.md  python.md  ruby.md  rust.md  swift.md  typescript.md
docs/sessions/: session-7-phase-b-complete.md  session-7-swift-parser-fix.md  session-7b-java-progress.md  session-7c-java-fixes.md  session-7d-go-parser-fix.md  session-7e-phase-c1-integration-tests.md  session-7f-phase-c2-plan.md  session-7g-phase-c2-real-world-validation.md  session-7h-phase-c3-edge-case-testing.md  session-8-phase-d-documentation-update.md  session-9-phase-a-output-formatters-complete.md
docs/user/: COMMAND-LINE-OPTIONS.md  project-root-detection.md
internal/ai/: action.go  registry.go  registry_global.go  template.go
internal/aiactions/: complex_codebase_prompt.go  deep_analysis_flow.go  multi_file_docs_flow.go  performance_prompt.go  refactoring_prompt.go  register.go  security_prompt.go  template_actions.go  template_loader.go
internal/cli/: help.go  root.go  root_test.go
internal/debug/: context.go  debugger.go
internal/formatter/: cpp_formatter.go  csharp_formatter.go  formatter.go  go_formatter.go  java_formatter.go  javascript_formatter.go  json_structured.go  json_structured_test.go  jsonl.go  jsonl_test.go  kotlin_formatter.go  language_aware_text_formatter.go  language_formatter.go  markdown.go  markdown_test.go  php_formatter.go  python_formatter.go  registry.go  registry_test.go  ruby_formatter.go  rust_formatter.go  swift_formatter.go  text.go  text_formatter.go  text_visibility_test.go  typescript_formatter.go  xml.go  xml_test.go
internal/ignore/: bin_obj_test.go  ignore.go  ignore_test.go
internal/importfilter/: base_filter.go  comprehensive_test.go  cpp_filter.go  csharp_filter.go  filter.go  filter_test.go  go_filter.go  java_filter.go  javascript_filter.go  php_filter.go  python_filter.go  ruby_filter.go
internal/ir/: directory.go  nodes.go  types.go  types_test.go  visitor.go  visitor_test.go  walk.go
internal/language/: detector.go  nocgo.go  registry.go  registry_cgo.go  registry_nocgo.go
internal/parser/: converter.go  parser.go  (+3 more)
mcp-npm/: .gitignore  .npmignore  LICENSE  README.md  claude-desktop-config.json  go.mod  index.js  install-local.sh  mcp-server-sdk.ts  mcp-server-wrapper.js  mcp-server.js  package.json  publish.sh  test-local.sh  test-mcp.sh  tsconfig.json
poc/: COMPARISON.md
scripts/: build-mcp-releases.sh  build-releases.sh  build.sh  differential_testing.py  download_tree_sitter_wasm.sh  regenerate-expected.sh  release.sh
test-data/: Makefile  TEST_DOCUMENTATION.md  TEST_STRATEGY.md  distiller_test.go  format_validator.go  integration_cli_test.go  integration_test.go  javascript_comprehensive_test.go  python_comprehensive_test.go  quality_analysis.md  test_report.md  test_runner.go  validation_report.md
(+916 files in other folders)
