[workspace]
resolver = "2"
members = [
    "crates/aid-cli",
    "crates/distiller-core",
    "crates/lang-python",
    "crates/lang-typescript",
    "crates/lang-go",
    "crates/lang-javascript",
    # Language processors will be added here as they're created
    # Formatters will be added here as they're created
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Jan Regeš <jan@reges.dev>"]
license = "MIT"
repository = "https://github.com/janreges/ai-distiller"

[workspace.dependencies]
# Core
anyhow = "1.0"
thiserror = "2.0"

# Parallelism - rayon ONLY (no tokio in core!)
rayon = "1.10"

# Parsing - native Rust bindings (no CGO!)
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
walkdir = "2.5"
ignore = "0.4"
num_cpus = "1.16"

# Testing
insta = { version = "1.40", features = ["json", "yaml"] }
criterion = "0.5"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
