[workspace]
resolver = "2"
members = [
    "crates/aid-cli",
    "crates/distiller-core",
    "crates/lang-python",
    "crates/lang-typescript",
    "crates/lang-go",
    "crates/lang-javascript",
    "crates/lang-rust",
    "crates/lang-ruby",
    "crates/lang-swift",
    "crates/lang-java",
    "crates/lang-kotlin",
    "crates/lang-cpp",
    "crates/lang-php",
    "crates/lang-csharp",
    "crates/lang-c",
    "crates/formatter-text",
    "crates/formatter-markdown",
    "crates/formatter-json",
    "crates/formatter-jsonl",
    "crates/formatter-xml",
    "crates/mcp-server",
    # Language processors will be added here as they're created
    # Formatters will be added here as they're created
]

[workspace.package]
version = "2.0.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["cognitive-glitch <drivedon02@gmail.com>"]
license = "MIT"
repository = "https://github.com/cognitive-glitch/ai-distiller-reboot"

[workspace.dependencies]
# Core
anyhow = "1.0"
thiserror = "2.0"

# Parallelism - rayon ONLY (no tokio in core!)
rayon = "1.10"

# Parsing - native Rust bindings (no CGO!)
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
walkdir = "2.5"
ignore = "0.4"
glob = "0.3"
num_cpus = "1.16"

# Testing
insta = { version = "1.40", features = ["json", "yaml"] }
criterion = "0.7"
proptest = "1.5"

[workspace.lints.rust]
rust-2024-compatibility = "warn"
rust-2024-incompatible-pat = "warn"

# # Docs lints
# missing_docs = "warn"

[workspace.lints.clippy]
# all = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
# pedantic = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

# Performance lints
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"

# Correctness lints
fallible_impl_from = "warn"
missing_const_for_fn = "warn"
# unwrap_used = "warn"
# expect_used = "warn"
# panic = "warn"

[profile.release]
lto = true
opt-level = 3
strip = true
debug = false
panic = "abort"

rpath = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

# Development profile - optimized for fast compile times
[profile.dev]
incremental = false    # Disable incremental compilation for macro-heavy code
opt-level = 0          # No optimization for fastest builds
debug = true           # Enable debug info
overflow-checks = true

# Build script optimization for development
[profile.dev.build-override]
# Helps with compile times for macro-heavy code
# See: https://corrode.dev/blog/tips-for-faster-rust-compile-times/
opt-level = 1

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
