[package]
name = "formatter-markdown"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
distiller-core = { path = "../distiller-core" }
formatter-text = { path = "../formatter-text" }

[dev-dependencies]
