[package]
name = "lang-javascript"
version.workspace = true
edition.workspace = true

[dependencies]
distiller-core = { path = "../distiller-core" }
tree-sitter = { workspace = true }
tree-sitter-javascript = "0.25"
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
