[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Simplified MCP server for AI Distiller with 4 core operations"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[dependencies]
# Core library
distiller-core = { path = "../distiller-core" }

# All language processors
lang-python = { path = "../lang-python" }
lang-typescript = { path = "../lang-typescript" }
lang-javascript = { path = "../lang-javascript" }
lang-go = { path = "../lang-go" }
lang-rust = { path = "../lang-rust" }
lang-java = { path = "../lang-java" }
lang-kotlin = { path = "../lang-kotlin" }
lang-swift = { path = "../lang-swift" }
lang-ruby = { path = "../lang-ruby" }
lang-php = { path = "../lang-php" }
lang-csharp = { path = "../lang-csharp" }
lang-cpp = { path = "../lang-cpp" }
lang-c = { path = "../lang-c" }

# All formatters
formatter-text = { path = "../formatter-text" }
formatter-markdown = { path = "../formatter-markdown" }
formatter-json = { path = "../formatter-json" }
formatter-jsonl = { path = "../formatter-jsonl" }
formatter-xml = { path = "../formatter-xml" }

tokio = { version = "1.41", features = [
    "rt-multi-thread",
    "io-std",
    "macros",
    "io-util",
] } # JSON-RPC and async runtime (minimal tokio usage)
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
